# dmriprep

./: .gitignore  CLAUDE.md  README.rst  pyproject.toml  tox.ini
.circleci/: config.yml
.github/workflows/: docs.yml  pypi-package.yml  test.yml
.maint/: update_authors.py
dmriprep/: conftest.py
dmriprep/cli/: parser.py  run.py  version.py  workflow.py
dmriprep/cli/tests/: test_parser.py  test_version.py
dmriprep/config/: __init__.py  testing.py
dmriprep/data/: __init__.py  boilerplate.bib  fmap_spec.json  io_spec.json
dmriprep/data/flirtsch/: b02b0.cnf  b02b0_2.cnf
dmriprep/data/tests/: __init__.py  __main__.py  config.toml
dmriprep/interfaces/: __init__.py  bids.py  images.py  nifreeze.py  reports.py  vectors.py
dmriprep/utils/: bids.py  images.py  misc.py  vectors.py
dmriprep/utils/tests/: test_bids.py  test_vectors.py
dmriprep/workflows/: base.py
dmriprep/workflows/dwi/: __init__.py  base.py  eddy.py  fit.py  hmc.py  outputs.py  registration.py  resampling.py
dmriprep/workflows/dwi/tests/: test_fit.py
docs/: Makefile  conf.py  installation.rst  roadmap.rst
docs/_static/css/: version.css
docs/_templates/: layout.html
docs/tools/: buildmodref.py
scripts/: fetch_dipy.py  fetch_templates.py
