[build-system]
requires = ["hatchling>=1.27", "hatch-vcs", "nipreps-versions"]
build-backend = "hatchling.build"

[project]
name = "dmriprep"
description = "A robust and easy-to-use pipeline for preprocessing of diverse fMRI data"
readme = "long_description.rst"
authors = [{name = "The NiPreps Developers", email = "nipreps@gmail.com"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "dipy >=1.11.0",
    "looseversion >= 1.3",
    "h5py",
    "nibabel >= 5.1.1",
    "nifreeze >= 0.0.1",
    "nipype >= 1.9.0",
    "nireports >= 24.1.0",
    "nitransforms >= 25.0.1",
    "niworkflows >= 1.14.2",
    "numpy >= 1.26",
    "packaging >= 24",
    "pandas >= 2.2",
    "psutil >= 5.4",
    "pyyaml",
    "pybids >= 0.16",
    "requests >= 2.27",
    "sdcflows >= 2.15.0",
    "smriprep >= 0.19.2",
    "templateflow >= 24.2.2",
    "transforms3d >= 0.4.2",
    "toml >= 0.10",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/nipreps/dmriprep"
Documentation = "https://www.nipreps.org/dmriprep"
"Docker Images" = "https://hub.docker.com/r/nipreps/dmriprep/tags/"
NiPreps = "https://www.nipreps.org/"

[project.optional-dependencies]
doc = [
    "nbsphinx",
    "pydot>=1.2.3",
    "pydotplus",
    "sphinx-argparse",
    "sphinx-github-style",
    "sphinx-rtd-theme",
    "sphinx >= 6.2, < 8",
    "sphinxcontrib-apidoc",
    "sphinxcontrib-napoleon",
]
dev = [
    "ruff",
    "pre-commit",
]
duecredit = ["duecredit"]
resmon = []
container = [
    "dmriprep[telemetry]",
    # templateflow extras
    "datalad",
    "datalad-osf",
]
telemetry = [
    "migas >= 0.4.0",
    "sentry-sdk >= 1.3",
]
test = [
    "coverage[toml] >= 5.2.1",
    "pytest >= 8.1",
    "pytest-cov >= 2.11",
    "pytest-env",
    "pytest-xdist >= 2.5",
]
maint = [
    "fuzzywuzzy",
    "python-Levenshtein",
]
# Aliases
docs = ["dmriprep[doc]"]
tests = ["dmriprep[test]"]
all = ["dmriprep[doc,maint,telemetry,test]"]

[project.scripts]
dmriprep = "dmriprep.cli.run:main"

#
# Hatch configurations
#

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
exclude = [".git_archival.txt"]  # No longer needed in sdist

[tool.hatch.build.targets.wheel]
packages = ["dmriprep"]
exclude = [
    "dmriprep/data/tests/work",  # Large test data directory
    "dmriprep/data/flirtsch/b02b0_2.cnf",  # Symlink to b02b0.cnf (the default)
]

##  The following two sections configure setuptools_scm in the hatch way

[tool.hatch.version]
source = "vcs"
raw-options = { version_scheme = "nipreps-calver" }

[tool.hatch.build.hooks.vcs]
version-file = "dmriprep/_version.py"

#
# Developer tool configurations
#

# Disable black
[tool.black]
exclude = ".*"

[tool.pytest.ini_options]
minversion = "6"
testpaths = ["dmriprep"]
log_cli_level = "INFO"
xfail_strict = true
norecursedirs = [".git"]
addopts = [
  "-svx",
  "-ra",
  "--strict-config",
  "--strict-markers",
  "--doctest-modules",
  # Config pytest-cov
  "--cov=dmriprep",
  "--cov-report=xml",
  "--cov-config=pyproject.toml",
]
doctest_optionflags = "ALLOW_UNICODE NORMALIZE_WHITESPACE ELLIPSIS NUMBER"
env = "PYTHONHASHSEED=0"
filterwarnings = ["ignore::DeprecationWarning"]
junit_family = "xunit2"

[tool.ruff]
line-length = 99

[tool.ruff.lint]
extend-select = [
  "I",
  "UP",
  "YTT",
  "S",
  "BLE",
  "B",
  "A",
  "C4",
  # "CPY",
  "DTZ",
  "T10",
  # "EM",
  "EXE",
  "FA",
  "ISC",
  "ICN",
  "LOG",
  "PIE",
  "PYI",
  "PT",
  "Q",
  # "SIM",
  # "TID",
  "FLY",
  # "PD",
  "PERF",
  "W",
  "PGH",
  "PLC",
  "PLE",
  "PLW",
  "FURB",
  "RUF",
]
ignore = [
  "S311",  # We are not using random for cryptographic purposes
  "S603",
  "PIE790",
  "PERF203",
  "PLC0415",
  "PLW2901",
  "RUF005",
  "RUF012",
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.extend-per-file-ignores]
"*/test_*.py" = ["S101"]
"dmriprep/utils/debug.py" = ["A002", "T100"]
"docs/conf.py" = ["A001"]
"docs/sphinxext/github_link.py" = ["BLE001"]

[tool.ruff.format]
quote-style = "single"

[tool.coverage.run]
branch = true
omit = [
    "*/_version.py"
]

[tool.coverage.paths]
source = [
  "dmriprep",
  "**/site-packages/dmriprep"
]

[tool.pixi.workspace]
channels = ["https://fsl.fmrib.ox.ac.uk/fsldownloads/fslconda/public", "mrtrix3", "conda-forge"]
# NOTE: osx-arm64 disabled due to nifreeze/nitransforms version conflict
# Re-enable when nifreeze releases a version compatible with nitransforms>=25.0.1
platforms = ["linux-64"]
# platforms = ["linux-64", "osx-arm64"]

[tool.pixi.feature.documentation.pypi-dependencies]
niworkflows = ">=1.14.2"
sdcflows = "*"
smriprep = "*"
sphinx-autobuild = "*"

[tool.pixi.feature.documentation.activation.env]
PYTHONPATH = "$(pwd)"

[tool.pixi.feature.documentation.tasks.update-version]
description = "Interpolate the current version."
cmd = 'hatch build --hooks-only'

[tool.pixi.feature.documentation.tasks.build-apidocs]
description = "Generate API documentation stubs with sphinx-apidoc."
cmd = 'sphinx-apidoc --module-first -d 1 -T -o docs/api dmriprep dmriprep/tests dmriprep/data dmriprep/config/testing.py'
depends-on = ["update-version"]

[tool.pixi.feature.documentation.tasks.build-docs]
description = "Build the HTML documentation with Sphinx."
cwd = "docs"
cmd = 'make html'
depends-on = ["update-version"]

[tool.pixi.feature.documentation.tasks.docs]
description = "Serve documentation with sphinx-autobuild for live previews."
cmd = "sphinx-autobuild docs/ docs/_build/html --host 0.0.0.0 --port 8000 --watch docs"

[tool.pixi.feature.documentation.dependencies]
graphviz = ">=13.1.2,<14"
hatch = ">=1.14.1,<2"
hatch-vcs = ">=0.5.0,<0.6"
hatchling = ">=1.27.0,<2"
make = ">=4.4.1,<5"
nipype = ">=1.10.0,<2"
python = ">=3.12"
toml = ">=0.10.2,<0.11"

[tool.pixi.feature.pytest]

[tool.pixi.feature.pytest.pypi-dependencies]
dmriprep = { path = ".", editable = true, extras = ["test"] }
tox = "*"

[tool.pixi.feature.pytest.dependencies]
dipy = ">=1.11.0"

[tool.pixi.feature.pytest.tasks.tox]
description = "Run tox."
cmd = "tox"

[tool.pixi.feature.container]

[tool.pixi.feature.container.dependencies]
dipy = ">=1.11.0"
nodejs = ">=24.4.1,<24.10"

[tool.pixi.feature.container.activation.env]
FSLDIR = "$CONDA_PREFIX"

[tool.pixi.feature.editable.pypi-dependencies]
dmriprep = { path = ".", editable = true }
[tool.pixi.feature.production.pypi-dependencies]
dmriprep = { path = ".", editable = false }

[tool.pixi.feature.production.dependencies]
pandoc = ">=3.8.2,<4"

[tool.pixi.feature.dev.pypi-dependencies]
dmriprep = { path = ".", editable = true, extras = ["dev"] }

[tool.pixi.feature.dev.tasks]
lint = { cmd = "ruff check dmriprep", description = "Run linter" }
format = { cmd = "ruff format dmriprep", description = "Format code" }
style = { cmd = "ruff check --diff dmriprep && ruff format --diff dmriprep", description = "Check style" }
style-fix = { cmd = "ruff check --fix dmriprep && ruff format dmriprep", description = "Fix style issues" }

[tool.pixi.environments]
# Local installs will use editable
default = { features = ["editable"], solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }
test = { features = ["pytest", "dev"], solve-group = "default" }
docs = { features = ["documentation", "doc"], solve-group = "documentation", no-default-feature = true }
# Use "dmriprep" feature for production environment, so it is identifiable
dmriprep = { features = ["production", "container", "telemetry"], solve-group = "production" }

[tool.pixi.tasks]
test = { cmd = "pytest dmriprep -svx", description = "Run tests" }
test-cov = { cmd = "pytest dmriprep --cov=dmriprep --cov-report=term-missing", description = "Run tests with coverage" }

[tool.pixi.dependencies]
python = ">=3.10"

[tool.codespell]
skip = ["boilerplate.bib", "pixi.lock"]
